# pyre-code

./: .dockerignore  .gitignore  LICENSE  README.md  README_CN.md  docker-compose.yml  grading.Dockerfile  package-lock.json  package.json  pyproject.toml  setup.sh  web.Dockerfile
grading_service/: main.py  requirements.txt
scripts/: annotate_notebook.py  batch1_generate.py  build_solutions.py  get_problem_info.py  run-python.js  test_build_solutions.py  write_annotated_notebook.py
solutions/: 01_relu_interview.ipynb  01_relu_solution.ipynb  02_softmax_interview.ipynb  02_softmax_solution.ipynb  03_linear_interview.ipynb  03_linear_solution.ipynb  04_layernorm_interview.ipynb  04_layernorm_solution.ipynb  05_attention_interview.ipynb  05_attention_solution.ipynb  06_mha_interview.ipynb  06_mha_solution.ipynb  07_batchnorm_interview.ipynb  07_batchnorm_solution.ipynb  08_rmsnorm_interview.ipynb  08_rmsnorm_solution.ipynb  09_causal_attention_interview.ipynb  09_causal_attention_solution.ipynb  10_gqa_interview.ipynb  10_gqa_solution.ipynb  11_sliding_window_interview.ipynb  11_sliding_window_solution.ipynb  12_linear_attention_interview.ipynb  12_linear_attention_solution.ipynb  13_gpt2_block_interview.ipynb  13_gpt2_block_solution.ipynb  14_kv_cache_interview.ipynb  14_kv_cache_solution.ipynb  15_mlp_interview.ipynb  15_mlp_solution.ipynb  16_cross_entropy_interview.ipynb  16_cross_entropy_solution.ipynb  17_dropout_interview.ipynb  17_dropout_solution.ipynb  18_embedding_interview.ipynb  18_embedding_solution.ipynb  19_gelu_interview.ipynb  19_gelu_solution.ipynb  (+98 more)
(+139 files in other folders)
